fix authentication, order